# MaCh3

./: CMakeLists.txt
OscClass/: CMakeLists.txt
cmake/Modules/: NuOscillatorSetup.cmake
covariance/: covarianceBase.cpp  covarianceBase.h
manager/: CMakeLists.txt
samplePDF/: CMakeLists.txt  samplePDFFDBase.cpp  samplePDFFDBase.h
splines/: CMakeLists.txt  SplineStructs.h  exception_handler.hpp  oneAPISplineUtils.dp.cpp  oneAPISplineUtils.dp.hpp  splineFDBase.cpp
utils/: CMakeLists.txt  file_helper.h  root_utils.h
